Fix contact links wrapping on mobile

--- a/style.css
+++ b/style.css
@@ -73,13 +73,14 @@ a {
     -webkit-animation: fadein 0.8s 0.5s forwards;
     font-size: 2.2vh;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     gap: 1.5vh;
 }
 .contact-link {
     padding: 0.4vh 0.6vh;
     display: inline-block;
+    white-space: nowrap;
     -o-transition: .5s;
     -ms-transition: .5s;
     -moz-transition: .5s;
